Added springboot to .devcontainer config